--- a/pbr/CMakeLists.txt
+++ b/pbr/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(SRC
     ../src/vector.h    
     main.cpp
+    app.cpp
+    app.h
 )
 add_executable(pbr ${SRC})
 
