add TaskManager to pbr

--- a/pbr/CMakeLists.txt
+++ b/pbr/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 project(pbr CXX)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(SRC
@@ -11,6 +11,8 @@ set(SRC
     ../src/scene.cpp
     ../src/utils.h
     ../src/utils.cpp
+    ../src/concurrency.h
+    ../src/concurrency.cpp
     main.cpp
 )
 add_executable(pbr ${SRC})
